--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "resume-builder",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
