--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "resume-builder",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -19,7 +18,6 @@
   },
   "homepage": "https://github.com/Rilaey/Resume-Builder#readme",
   "dependencies": {
-    "chalk": "^5.2.0",
-    "inquirer": "^9.2.0"
+    "concurrently": "^8.2.0"
   }
 }
